--- a/resources/scss/blocks/core/separator.scss
+++ b/resources/scss/blocks/core/separator.scss
@@ -42,7 +42,7 @@ hr.wp-block-separator.is-style-double {
 // Hand-drawn style.
 hr.wp-block-separator.is-style-hand-drawn {
 	margin-bottom: -20px !important;
-	padding: var( --wp--preset--spacing--40 );
+	padding: var( --wp--preset--spacing--base );
 	border-width: var( --wp--preset--spacing--minus-2 ) 0 0;
 	border-radius: 255px 15px 0 0/15px 4px 0 0 !important;
 
