--- a/resources/scss/blocks/core/social-links.scss
+++ b/resources/scss/blocks/core/social-links.scss
@@ -15,7 +15,7 @@
 }
 
 .wp-block-social-links.is-style-pill-shape .wp-social-link .wp-block-social-link-anchor {
-	padding: var( --wp--preset--spacing--minus-2 ) var( --wp--preset--spacing--40 );
+	padding: var( --wp--preset--spacing--minus-2 ) var( --wp--preset--spacing--base );
 }
 
 // Font-size adjustments to match the theme.
